--- a/css/main.css
+++ b/css/main.css
@@ -1185,7 +1185,7 @@ ul {
     left: 6.5%;
   }
 
-  @media screen and (max-height: 992px) {
+  @media screen and (max-width: 992px) {
     .salary .salary__line {
       top: 46%;
     }
