--- a/assets/itc-slider.css
+++ b/assets/itc-slider.css
@@ -183,7 +183,7 @@
 }
 
 .itc-slider-item.salary-slider {
-  max-width: auto;
+  width: auto;
   flex: 0 0 100%;
   height: 175px;
 }
@@ -240,7 +240,7 @@
 }
 
 .itc-slider-item.about-teaching-slider {
-  max-width: auto;
+  width: auto;
   flex: 0 0 29%;
   min-height: 550px;
   background-color: #0B2235;
@@ -248,7 +248,7 @@
 }
 
 .itc-slider-items.about-teaching-slider {
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 .itc-slider-btn-prev.about-teaching-slider {
