--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,6 @@ ul {
   line-height: 19px;
   color: #232523;
   text-transform: uppercase;
-  margin-bottom: 20px;
 }
 
 .section-text {
@@ -222,7 +221,6 @@ ul {
   .section-title {
     font-size: 28px;
     line-height: 34px;
-    margin-bottom: 40px;
   }
 
   .action-btn {
@@ -629,7 +627,7 @@ ul {
 }
 
 .advantages {
-  margin-top: 40px;
+  margin-top: 70px;
   margin-bottom: 40px;
 }
 
@@ -722,7 +720,7 @@ ul {
   .advantages .container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 75px;
-    row-gap: 40px;
+    row-gap: 20px;
   }
 
   .advantages__item {
@@ -2280,6 +2278,12 @@ ul.header-card__text {
   grid-column-end: 13;
 }
 
+.teaching-card hr {
+  border: none;
+  border-top: 1px solid #FD460E;
+  opacity: 20%;
+}
+
 @media screen and (min-width: 576px) {
   .teaching {
     display: grid;
@@ -2367,7 +2371,7 @@ ul.header-card__text {
 
 .consult {
   display: none;
-  margin-bottom: 63px;
+  margin-bottom: 70px;
   margin-top: 140px;
 }
 
