--- a/css/main.css
+++ b/css/main.css
@@ -128,16 +128,6 @@ ul {
   cursor: pointer;
 }
 
-.more-info-link:after {
-  content: "";
-  width: 26px;
-  height: 16px;
-  display: inline-block;
-  background-image: url(../img/more-info-arrow.svg);
-  background-repeat: no-repeat;
-  margin-left: 25px;
-}
-
 .section-title-wrap {
   display: grid;
   grid-template-columns: 1fr auto;
@@ -534,6 +524,7 @@ ul {
 }
 
 .slider {
+  padding-bottom: 140px;
   margin-bottom: 0  ;
   background-image: url(../img/intro-background.png);
   height: 50vh;
@@ -595,7 +586,7 @@ ul {
 @media screen and (min-width:992px){
   .slider {
     height: 80vh;
-    padding: 0 20px;
+    padding: 0 20px 140px 20px;
   }
   
   .title {
@@ -625,6 +616,10 @@ ul {
 @media screen and (max-width: 576px) {
   .subtitle {
     display: none;
+  }
+
+  .slider {
+    padding: 0 20px;
   }
 }
 
@@ -2368,7 +2363,7 @@ ul.header-card__text {
 .consult {
   display: none;
   margin-bottom: 63px;
-  margin-top: 140px;
+  margin-top: 70px;
 }
 
 .consult .container {
