--- a/css/became-mentor-popup.css
+++ b/css/became-mentor-popup.css
@@ -72,6 +72,7 @@
   max-height: 100vh !important;
 }
 
+
 @media (min-width: 576px){
   .popup.popap-templ.became-mentor-popup .form textarea[name="comment"] {
     height: 60px;
@@ -86,7 +87,7 @@
     margin-top: 15px;
     font-size: 16px;
     overflow: hidden;
-    text-wrap: nowrap;
+    text-wrap: none;
     text-overflow: ellipsis;
   }
   
@@ -131,4 +132,9 @@
     font-size: 15px;
   }
   
+}
+@media screen and (max-width: 576px) {
+  .popup.popap-templ.became-mentor-popup {
+    overflow: auto;
+  }
 }
