fix: fix inputs width on become mentor page

--- a/css/became-mentor-popup.css
+++ b/css/became-mentor-popup.css
@@ -137,4 +137,8 @@
   .popup.popap-templ.became-mentor-popup {
     overflow: auto;
   }
+
+  .popup.popap-templ .popup-body .form .required {
+    width: auto;
+  }
 }
