--- a/css/tutors-page.css
+++ b/css/tutors-page.css
@@ -18,3 +18,8 @@
 .tutors-page .section-title {
   order: 1;
 }
+
+.tutors-page .header {
+  background: white;
+  box-shadow: 0 4px 4px 0 rgba(37, 36, 37, 0.04);
+}
