--- a/css/about-us.css
+++ b/css/about-us.css
@@ -42,6 +42,11 @@ li p {
     padding-bottom: 90px;
 }
 
+.abous-us .header {
+    background: white;
+    box-shadow: 0 4px 4px 0 rgba(37, 36, 37, 0.04);
+}
+
 @media screen and (max-width: 992px){
     .abous-us{
         margin-top: 80px;
