--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,16 @@ img {
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
 h6,
 p {
   margin: 0;
+}
+
+h2 {
+  margin-bottom: 20px;
 }
 
 a {
@@ -46,17 +49,46 @@ ul {
   list-style: none;
 }
 
+section {
+  padding: 20px;
+}
+
+.container {
+  padding: 0 20px;
+  max-width: 1174px;
+  margin: 0 auto;
+}
+
+.container-header {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-areas: "menu logo";
+  padding: 0 20px;
+  max-width: 1174px;
+  margin: 0 auto;
+  column-gap: 47px;
+}
+
 .content-container {
   max-width: 1174px;
   margin: 0 auto;
-  padding: 0 20px;
   position: relative;
 }
 
-.content-container.bg-dark {
+.bg-dark {
   background-color: #0B2235;
-  max-width: 100%;
-  padding: 0 20px;
+}
+
+.bg-dark .section-title {
+  color: #FD460E;
+}
+
+.bg-dark .section-text {
+  color: #fff;
+}
+
+.page-wrapper {
+  margin-top: 85px;
 }
 
 .btn {
@@ -102,6 +134,18 @@ ul {
   line-height: 19px;
   color: #232523;
   text-transform: uppercase;
+  grid-area: title;
+  grid-row: 2;
+  grid-column: 1;
+  margin: 0;
+
+}
+
+.tutors .section-title,
+.feedback .section-title {
+  grid-area: none;
+  grid-row: inherit;
+  grid-column: inherit;
 }
 
 .section-text {
@@ -149,6 +193,10 @@ ul {
   background-color: #fff;
 }
 
+.btn.btn_warn {
+  background-color: #FD460E;
+}
+
 .back-link {
   color: #297abf;
   font-size: 11px;
@@ -177,6 +225,7 @@ ul {
 
   .back-link {
     font-size: 24px;
+    margin-bottom: 32px
   }
 
   .back-link::before {
@@ -207,9 +256,15 @@ ul {
 }
 
 @media screen and (min-width:992px) {
+
+  .page-wrapper {
+    margin-top: 145px;
+  }
+
   .section-title {
     font-size: 32px;
     line-height: 38px;
+    margin-bottom: 40px;
   }
 
   .btn {
@@ -223,289 +278,6 @@ ul {
 @media screen and (min-width:1024px) {
   .section-title-wrap .more-info-link {
     display: block;
-  }
-}
-
-.header {
-  padding: 15px 0;
-  position: fixed;
-  z-index: 99999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  transition: 500ms;
-}
-
-.header .container {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-areas: "menu logo";
-  padding: 0 20px;
-  max-width: 1174px;
-  margin: 0 auto;
-  column-gap: 47px;
-}
-
-.header .mob-menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #fff;
-  height: 100vh;
-  transform: translateY(-100%);
-  transition: .3s;
-  padding: 30px 15px 0;
-}
-
-.header .mob-menu .logo{
-  margin: 10px auto 0;
-}
-
-.header .mob-menu.active {
-  transform: translateY(0);
-  transition: .3s;
-}
-
-.header .mob-menu .menu__nav {
-  display: grid;
-  font-family: "Venus Rising";
-  font-size: 10px;
-  line-height: 12px;
-  padding-top: 40px;
-}
-
-.header .mob-menu .menu__nav a {
-  color: #232523;
-}
-
-.header .mob-menu .menu__nav li {
-  padding: 12px 0 10px 20px;
-  font-size: 14px;
-  line-height: 2;
-  text-transform: uppercase;
-}
-
-
-.header .mob-menu .header__items {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  margin-left: 20px;
-  margin-top: 20px;
-}
-
-.header .mob-menu .header__items .btn{
-  margin: unset;
-  border-radius: 5px;
-  height: 30px;
-}
-
-.header .mob-menu .header__items .login-btn{
-  width: 72px;
-  margin-right: 20px;
-}
-
-.header .mob-menu .header__items .signup-btn{
-  width: 130px;
-}
-
-.header .mob-menu .header__footer{
-  position: absolute;
-  bottom: 80px;
-  width: calc(100% - 30px);
-  margin: 0 auto;
-}
-
-@media screen and (min-width:576px){
-.header .mob-menu .header__items .login-btn{
-  width: 50%
-}
-
-.header .mob-menu .header__items .signup-btn{
-  width: 50%;
-  }
-}
-
-.header.scrolled {
-  background-color: white;
-  box-shadow: 0 4px 4px 0 rgba(37, 36, 37, 0.04);
-}
-
-.menu__nav {
-  display: none;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  grid-area: menu;
-}
-
-.logo {
-  grid-area: logo;
-  width: 24px;
-  height: 30px;
-  justify-self: end;
-}
-
-.hamburger-menu {
-  display: flex;
-  justify-content: flex-end;
-  order: 1;
-  position: relative;
-  z-index: 999999;
-  top: 0;
-  transition: top .3s;
-}
-
-.hamburger-menu.active {
-  top: 25px;
-  transition: top .3s;
-  left: 10px;
-}
-
-.hamburger-menu.active .hamburger::after {
-  top: 9px;
-  transform: rotate(45deg);
-  transition: .3s;
-}
-
-.hamburger-menu.active .hamburger::before {
-  bottom: 9px;
-  transform: rotate(-45deg);
-  transition: .3s;
-}
-
-.hamburger-menu.active .hamburger span {
-  display: none;
-}
-
-.hamburger {
-  width: 30px;
-  height: 20px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.hamburger::after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  left: 0;
-  right: 0;
-  top: 0;
-  background-color: #000;
-  transition: .3s;
-  transform: translate(0);
-}
-
-.hamburger::before {
-  position: absolute;
-  content: "";
-  height: 2px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #000;
-  transition: .3s;
-  transform: translate(0);
-}
-
-.hamburger span {
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #000;
-  border-radius: 100px;
-  position: relative;
-}
-
-.header__items {
-  display: none;
-}
-
-.header__items .signup-btn{
-  background-color: #FD460E;
-  border-color: #FD460E;
-  width: 170px;
- }
-
-@media screen and (min-width:992px) {
-  .header .mob-menu .menu__nav{
-    display: none;
-  }
-  .hamburger-menu {
-    display: none;
-  }
-
-  .menu {
-    align-items: flex-end;
-    justify-content: space-between;
-  }
-
-  .menu__nav {
-    display: flex;
-    gap: 29px;
-    list-style: none;
-    font-family: "Venus Rising", sans-serif;
-    font-weight: 700;
-    width: 100%;
-  }
-
-  .menu__item a {
-    text-decoration: none;
-    font-size: 15px;
-    line-height: 19px;
-    text-transform: uppercase;
-    color: #232523;
-  }
-
-  .header .container {
-    grid-template-areas: "logo menu";
-  }
-
-  .header .items-wrap {
-    display: flex;
-    align-items: center;
-    gap: 25px;
-  }
-
-  .logo {
-    width: 47px;
-    height: 60px;
-  }
-
-  .header__items {
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-  }
-
-  .header__items .btn{
-    min-width: 100px;
-    width: 100%;
-    height: 30px;
-    padding: 4px 5px;
-    border-radius: 5px;
-    font-family: 'Venus Rising';
-    font-size: 15px;
-    border: none;
-  }
-
-  .header__items .login-btn{
-    width: 100px;
-  }
-
-  .header__items .signup-btn{
-   background-color: #FD460E;
-   border-color: #FD460E;
-   width: 170px;
-  }
-
-  .header__items .signup-btn:hover{
-    background-color: #24394A;
   }
 }
 
@@ -551,7 +323,7 @@ ul {
 
 
 @media screen and (min-width:576px) {
-  .slide {
+.slide {
     position: relative;
     max-width: 1176px;
     width: 100%;
@@ -570,7 +342,7 @@ ul {
 }
 
 @media screen and (min-width:992px){
-  .slider {
+.slider {
     height: 80vh;
     padding: 0 20px 140px 20px;
   }
@@ -609,81 +381,6 @@ ul {
   }
 }
 
-.advantages {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
-.advantages .container {
-  display: grid;
-  gap: 10px;
-}
-
-.advantages__item {
-  border: .8px solid #0b2235;
-  border-radius: 10px;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  padding: 10px 0;
-  position: relative;
-  width: 96%;
-  transform: translate(4%, 0);
-  color: #232523;
-  display: flex;
-  align-items: center;
-}
-
-.advantages__item p {
-  max-width: 205px;
-  margin: 0 auto;
-}
-
-.advantages .item__num {
-  display: block;
-  content: "";
-  position: absolute;
-  background-color: #fff;
-  font-size: 16px;
-  color: #fd460e;
-  font-weight: 700;
-  top: 50%;
-  transform: translate(-11px, -50%);
-  line-height: 18px;
-}
-
-@media(min-width:576px) {
-  .advantages {
-    margin-bottom: 60px;
-  }
-
-  .advantages__item {
-    padding: 17px 0;
-    font-size: 16px;
-    line-height: 23px;
-  }
-
-  .advantages__item p {
-    max-width: 279px;
-  }
-
-  .advantages .item__num {
-    line-height: 38px;
-    font-size: 33px;
-    transform: translate(-21px, -50%);
-  }
-}
-
-@media screen and (min-width:1024px) {
-  .advantages {
-    margin-bottom: 120px;
-  }
-}
-
-.tutors {
-  margin-bottom: 40px;
-}
-
 .tutors .section-title {
   max-width: 420px;
   text-transform: uppercase;
@@ -694,38 +391,15 @@ ul {
 }
 
 @media(min-width:576px) {
-  .tutors {
-    margin-bottom: 60px;
+  section {
+    padding: 30px 20px;
   }
 }
 
 @media screen and (min-width:992px) {
-  .advantages .container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 75px;
-    row-gap: 20px;
-  }
 
-  .advantages__item {
-    max-width: 540px;
-    box-sizing: border-box;
-    line-height: 28px;
-    height: 100px;
-    padding: 0 25px;
-  }
-
-  .advantages__item p {
-    max-width: 400px;
-  }
-
-  .advantages .item__num {
-    font-size: 26px;
-    padding: 10px 0;
-    transform: translate(-45px, -50%);
-  }
-
-  .tutors {
-    margin-bottom: 120px;
+  section {
+    padding: 60px 30px;
   }
 
   .tutors-card:nth-child(n+4):not(.became-tutor) {
@@ -752,7 +426,6 @@ ul {
 .tutors-card__wrap {
   display: grid;
   row-gap: 20px;
-  margin-bottom: 20px;
 }
 
 .tutors-card__top {
@@ -858,7 +531,6 @@ ul {
   .tutors-card__wrap {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 18px;
-    margin-bottom: 40px;
   }
 
   .tutors-card.became-tutor,
@@ -995,430 +667,12 @@ ul {
   }
 }
 
-.roadmap {
-  margin-bottom: 40px;
-}
-
-@media(min-width:576px) {
-  .roadmap {
-    margin-bottom: 60px;
-  }
-}
-
-@media(min-width:992px) {
-  .roadmap {
-    margin-bottom: 120px;
-  }
-}
-
-.about-teaching {
-  margin-bottom: 140px;
-}
-
-@media screen and (max-width: 576px) {
-  .about-teaching {
-    margin-bottom: 50px;
-  }
-}
-
-.about-teaching-slider__content {
-  background-color: #0B2235;
-  border-radius: 20px;
-  position: absolute;
-  padding: 40px 40px 0 40px;
-  left: -1px;
-  right: -1px;
-  top: 0;
-  transition: .5s;
-}
-
-.about-teaching-slider__title {
-  font-size: 18px;
-  color: #FD460E;
-  text-align: center;
-}
-
-.about-teaching-slider__list {
-  margin-top: 20px;
-}
-
-.about-teaching-slider__list li {
-  color: white;
-  font-size: 13px;
-  margin-bottom: 12px;
-  position: relative;
-}
-
-.about-teaching-slider__list li::before {
-  content: "\2022";
-  color: #FD460E;
-  font-size: 36px;
-  position: absolute;
-  left: -15px;
-  top: -15px;
-}
-
-.about-teaching-slider__footer{
-  position: absolute;
-  bottom: 20px;
-  width: 90%;
-  overflow: hidden;
-  height: 0;
-  transition: .5s;
-}
-
-.about-teaching-slider__footer  button{
-  background-color: #FD460E;
-  height: 60px;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-.about-teaching-slider__footer a {
-  color: white;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.itc-slider-item.about-teaching-slider:hover .about-teaching-slider__content {
-  top: -20px;
-}
-
-.itc-slider-item.about-teaching-slider:hover .about-teaching-slider__footer {
-  height: 60px;
-}
-
-.accordion.about-teaching-accordion {
-  display: none;
-}
-
-@media screen and (max-width: 576px) {
-  .about-teaching-slider {
-    display: none;
-  }
-
-  .accordion.about-teaching-accordion {
-    display: block;
-  }
-
-  .about-teaching-accordion-item {
-    background-color: #0B2235;
-    margin-bottom: 10px;
-  }
-
-  .accordion__item.about-teaching-accordion-item {
-    padding: 20px;
-  }
-
-  .about-teaching-accordion-title {
-    font-size: 16px;
-    font-weight: 500;
-    color: #FD460E;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .about-teaching-accordion-title svg {
-    transition: .5s;
-  }
-
-  .about-teaching-accordion-item.active .about-teaching-accordion-title svg {
-    rotate: 180deg; 
-  }
-
-  .about-teaching-accordion-content {
-    border-top: none !important;
-    font-size: 13px;
-    color: #131313;
-  }
-
-  .about-teaching-accordion-content__list {
-    color: #FFFFFF;
-  }
-
-  .about-teaching-accordion-content__list li::before {
-    content: "\2022";
-    font-weight: bold;
-    font-size: 24px;
-    color: #FD460E;
-  }
-
-  .about-teaching-accordion-content .btn {
-    margin: 20px 0 0 0;
-    max-width: 100%;
-    width: 100%;
-    height: 32px;
-    background-color: #FD460E;
-  }
-
-  .about-teaching-accordion-content a {
-    color: #FFFFFF;
-  }
-}
-
-.salary {
-  margin-bottom: 40px;
-}
-
-@media screen and (max-width: 576px) {
-  .salary .section-content {
-    flex-direction: column;
-  }
-}
-
-.salary .salary-card {
-  border: 1px solid rgba(11, 34, 53, .3);
-  border-radius: 10px;
-  padding: 14px 20px;
-  display: grid;
-  grid-template-columns: 52px auto 1fr;
-  column-gap: 15px;
-  align-items: center;
-}
-
-.salary .salary-card__sum {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  color: #fd460e;
-  white-space: nowrap;
-}
-
-.salary .salary-card__rank {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14px;
-  color: #232523;
-}
-
-.salary .salary-card__rank-time {
-  font-size: 14px;
-  line-height: 16px;
-  color: #bdbdbd;
-}
-
-.salary .salary-card__text {
-  display: none;
-}
-
-.salary .salary-card__img {
-  width: 100%;
-}
-
-.itc-slider.salary-slider {
-  width: 75%;
-  row-gap: 10px;
-  position: relative;
-}
-
-@media screen and (max-width: 992px) {
-  .itc-slider.salary-slider {
-    width: 100%;
-  }
-}
-
-.salary .salary-cards {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 576px) {
-  .salary .salary-cards {
-    flex-direction: column;
-  }
-
-  .salary-card {
-    margin-top: 10px;
-  }
-}
-
-.salary .salary__line {
-  display: none;
-}
-
-.salary .salary__title {
-  font-size: 14px;
-  color: #fd460e;
-}
-
-@media screen and (max-width: 576px) {
-  .salary .salary__title {
-    color: #242524;
-  }
-
-  .salary .btn {
-    margin-top: 50px;
-    max-width: 80%;
-    width: 100%;
-  }
-}
-
-@media screen and (min-width:576px) {
-  .salary .salary-card-wrap {
-    grid-template-columns: repeat(4, 1fr);
-    border: 1px solid #0b2235;
-    border-radius: 15px;
-    padding: 35px 30px;
-  }
-
-  .salary .salary-card {
-    border: none;
-    grid-template-columns: auto;
-    grid-template-rows: 1fr auto 1fr;
-    justify-items: center;
-    text-align: center;
-    padding: 0;
-    margin-top: -6px;
-  }
-
-  .salary .salary-card__sum {
-    align-self: end;
-    font-size: 16px;
-  }
-
-  .salary .salary-card__img {
-    display: flex;
-    margin: 15px 0;
-  }
-
-  .salary .salary-card .item-group {
-    align-self: start;
-  }
-
-  .salary .salary-card .salary-card__rank {
-    font-size: 16px;
-    margin-bottom: 3px;
-  }
-
-  .salary .salary-card .salary-card__rank-time {
-    font-size: 12px;
-  }
-
-  .salary .salary-card:nth-child(1) {
-    justify-content: start;
-  }
-
-  .salary .salary-card:nth-child(1) .salary-card__img {
-    width: 15px;
-    height: 15px;
-  }
-
-  .salary .salary-card:nth-child(2) {
-    justify-content: start;
-  }
-
-  .salary .salary-card:nth-child(2) .salary-card__img {
-    width: 20px;
-    height: 20px;
-  }
-
-  .salary .salary-card:nth-child(3) {
-    justify-content: start;
-  }
-
-  .salary .salary-card:nth-child(3) .salary-card__img {
-    width: 25px;
-    height: 25px;
-  }
-
-  .salary .salary-card:nth-child(4) {
-    justify-content: end;
-  }
-
-  .salary .salary-card:nth-child(4) .salary-card__img {
-    width: 30px;
-    height: 30px;
-  }
-
-  .salary .salary-card:nth-child(5) {
-    justify-content: start;
-    margin-left: 35px;
-  }
-
-  .salary .salary-card:nth-child(5) .salary-card__img {
-    width: 25px;
-    height: 25px;
-  }
-
-  .salary .salary-card:nth-child(6) .salary-card__img {
-    width: 30px;
-    height: 30px;
-  }
-
-  .salary .salary__line {
-    display: block;
-    position: absolute;
-    width: 87%;
-    height: 1px;
-    background-color: #0b2235;
-    top: 50%;
-    left: 6.5%;
-  }
-
-  @media screen and (max-width: 992px) {
-    .salary .salary__line {
-      top: 46%;
-    }
-  }
-
-  .salary .btn {
-    display: block;
-  }
-
-  .salary .salary__title {
-    display: block;
-    text-align: center;
-    font-size: 3vw;
-    font-weight: 400;
-    font-size: 20px;
-    color: #232523;
-  }
-}
-
-@media screen and (min-width:992px) {
-  .salary {
-    margin-bottom: 120px;
-  }
-
-  .salary .salary-card__text {
-    display: block;
-    width: 232px;
-    font-size: 16px;
-    line-height: 19px;
-  }
-
-  .salary .salary-card-wrap {
-    grid-template-columns: repeat(5, 1fr);
-  }
-
-  .salary .salary__title {
-    top: 40px;
-    left: 47%;
-    transform: translate(0);
-    font-size: 24px;
-  }
-}
-
-.feedback {
-  margin-bottom: 40px;
-}
-
 .btn-wrap,
 .tutors-card__tutor {
   display: none;
 }
 
 @media(min-width:992px) {
-  .feedback {
-    margin-bottom: 55px;
-  }
 
   .tutors-card__top {
     grid-template-rows: 1fr 20px;
@@ -1450,10 +704,6 @@ ul {
     display: none;
   }
 
-  .tutors-card__wrap {
-    margin-bottom: 120px;
-  }
-
   .tutors-card__course {
     grid-template-areas: "title title""curs_name curs_name""link link";
   }
@@ -1473,10 +723,6 @@ ul {
     margin-bottom: 5px;
     color: #bdbdbd;
   }
-}
-
-.faq {
-  margin-bottom: 40px;
 }
 
 .faq .accordion {
@@ -1559,9 +805,6 @@ ul {
 }
 
 @media(min-width:992px) {
-  .faq {
-    margin-bottom: 120px;
-  }
 
   .faq .btn {
     display: none;
@@ -2421,8 +1664,7 @@ ul.header-card__text {
     margin-top: 40px;
   }
 
-  .content-container.feedback-page .section-title-wrap .back-link,
-  .content-container.tutors-page .section-title-wrap .back-link,
+  .back-link,
   .popup.feedback-popup .popup-body > .feedback-popup__name,
   .popup.feedback-popup .tutors-card__rate,
   .mentor-info-popup__wrapper .mentor-name,
@@ -2480,8 +1722,6 @@ ul.header-card__text {
 
 .consult {
   display: none;
-  margin-bottom: 70px;
-  margin-top: 70px;
 }
 
 .consult .container {
@@ -2665,6 +1905,7 @@ ul.header-card__text {
 }
 
 @media (max-width: 992px) {
+
   .privacy-policy-link {
     position: relative;
     left: 0;
@@ -2730,15 +1971,5 @@ ul.header-card__text {
     grid-column: 2;
     grid-row: 1;
     margin-top: 65px;
-  }
-
-  .tutors .section-title,
-  .advantages .section-title,
-  .roadmap .section-title,
-  .salary .section-title,
-  .feedback .section-title,
-  .faq .section-title,
-  .callback-form .section-title {
-    margin-bottom: 40px;
   }
 }
